# health-notify

./: Cargo.toml  README.md  flake.nix  package.nix
src/: lazy_fail_init.rs  main.rs  sd_notify.rs
tools/: rust-analyzer.sh
